2004-01-07  Uwe Kindler <ukindler@htwm.de>

	* src/if_lan91cxx.c: Fail initialization if no link found.

2004-01-06  Andrew Lunn  <andrew.lunn@ascom.ch>

        * cdl/smsc_lan91cxx_eth_drivers.cdl: 
	* src/if_lan91cxx.c (smsc_lan91cxx_init): Allow the interrupt
	priority to be overrode by the HW specific part of the driver.

2003-12-19  Gary Parnes  <garyp@logicpd.com>

	* src/smsc_lan91cxx.h (get_banksel): Allow this function to be 
	overridden. 

2003-12-10  Uwe Kindler <uwe_kindler@web.de>

	* src/if_lan91cxx.c: Add some missing endian swapping calls.

2003-12-05  Nick Garnett  <nickg@calivar.com>

	* src/if_lan91cxx.c: Added support for revA of the LAN91C111 which
	has a bug. Fixed up debugging messages so that it uses serial
	output in RedBoot.

2003-03-03  Patrick Doyle  <wpd@delcomsys.com>

	* src/smsc_lan91cxx.h
	* src/if_lan91cxx.c (smsc_lan91cxx_init): Reworked to support
	flash, CDL, and eeprom ESA assignment, in that priority.

	* cdl/smsc_lan91cxx_eth_drivers.cdl: Added comment indicating that
	use of the CYGINT_DEVS_ETH_SMSC_LAN91CXX_STATIC_ESA interface is
	deprecated.

2003-02-26  Yoshinori Sato <ysato@users.sourceforge.jp>

	* src/smsc_lan91cxx.h: Support big endian arch.	
	* src/if_lan91cxx.c: Support big endian arch.

2002-08-28  Mark Salter  <msalter@redhat.com>

	* src/smsc_lan91cxx.h: Support 32-bit data reads.
	* src/if_lan91cxx.c: Fix standalone (RedBoot) interrupt handling.
	Support 32-bit data reads.

2002-08-16  Mark Salter  <msalter@redhat.com>

	* src/if_lan91cxx.c: Add support for 91C111. Platform-specific
	include file is now included from within smsc_lan91cxx.h so
	that register access functions may be overridden if necessary.
	* src/smsc_lan91cxx.h: Ditto.

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_lan91cxx.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2001-12-12  Hugo Tyson  <hmt@redhat.com>
